--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,11 +2,37 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
+vellum-doc {
+  --index-width: 250px;
+}
+
 vellum-doc::part(index) {
   margin-top: 1.6rem;
   padding-right: 1em;
   padding-left: 1em;
-  border-right: none;
+  border-right: 2px solid black;
+}
+
+vellum-doc::part(index-h1) {
+  font-size: 1.4em;
+  text-transform: uppercase;
+}
+
+vellum-doc::part(index-h2) {
+  font-size: 1.3em;
+}
+
+vellum-doc::part(index-h3) {
+  font-size: 1em;
+}
+
+vellum-doc::part(index-h4) {
+  font-size: 0.8em;
 }
 
 article#document {
