[wip] Fix: link previews

--- a/index.liquid
+++ b/index.liquid
@@ -12,6 +12,7 @@
     <link href="assets/styles/main.css" rel="stylesheet" />
 
     <script type="module">
+      import './vendor/link-preview/link-preview.js'
       import './vendor/vellum-doc/vellum-doc.js'
     </script>
 
