[wip] Various fixes

--- a/index.liquid
+++ b/index.liquid
@@ -3,11 +3,10 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
 
     <title>{{ project.document.title }}</title>
 
-    <link href="vendor/normalize.css/normalize.css" rel="stylesheet" />
     <link href="vendor/magick.css/magick.css" rel="stylesheet" />
     <link href="assets/styles/main.css" rel="stylesheet" />
 
@@ -23,7 +22,9 @@
           {{ content }}
 
           <footer>
-            <p>{{ project.document.title }} {{ project.version }} &copy; 2024 <a href="{{ project.author.url }}">{{ project.author.name }}</a></p>
+            <p>{{ project.document.title }} {{ project.version }} &copy; 2024
+              <a href="{{ project.author.url }}">{{ project.author.name }}</a>
+            </p>
           </footer>
         </section>
       </vellum-doc>
