--- a/index.liquid
+++ b/index.liquid
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 
     <title>{{ project.document.title }}</title>
 
-    <link href="vendor/magick.css/magick.css" rel="stylesheet" />
-    <link href="assets/styles/main.css" rel="stylesheet" />
+    <link href="vendor/magick.css/magick.css" rel="stylesheet">
+    <link href="assets/styles/main.css" rel="stylesheet">
 
     <script type="module">
-      import "./vendor/vellum-doc/vellum-doc.js";
+      import './vendor/vellum-doc/vellum-doc.js';
     </script>
   </head>
 
@@ -22,7 +21,9 @@
           {{ content }}
 
           <footer>
-            <p>{{ project.document.title }} {{ project.version }} &copy; 2024
+            <p>
+              {{ project.document.title }}
+              {{ project.version }} &copy; 2024
               <a href="{{ project.author.url }}">{{ project.author.name }}</a>
             </p>
           </footer>
