Add: recommended CSS reset for magick.css

--- a/index.liquid
+++ b/index.liquid
@@ -6,6 +6,7 @@
 
     <title>{{ project.document.title }}</title>
 
+    <link href="vendor/normalize.css/normalize.css" rel="stylesheet">
     <link href="vendor/magick.css/magick.css" rel="stylesheet">
     <link href="assets/styles/main.css" rel="stylesheet">
 
