Add: sanitise HTML

--- a/index.liquid
+++ b/index.liquid
@@ -19,7 +19,7 @@
     <main>
       <vellum-doc anchors>
         <section id="document">
-          {{ content }}
+          {{ content | safe }}
 
           <footer>
             <p>
