Refactor: footer into separate module

--- a/index.liquid
+++ b/index.liquid
@@ -19,15 +19,12 @@
     <vellum-doc anchors>
       <main>
         <section id="document">
-          {% capture document %}{% render "README.md" %}{% endcapture %}
+          {% capture document %}{% include "README.md" %}{% endcapture %}
           {{ document | markdown | safe }}
 
           <footer>
-            <p>
-              {{ project.document.title }}
-              {{ project.version }} &copy; 2024
-              <a href="{{ project.author.url }}">{{ project.author.name }}</a>
-            </p>
+            {% capture footer %}{% include "includes/footer.md" %}{% endcapture %}
+            {{ footer | markdown | safe }}
           </footer>
         </section>
       </main>
